docs/refs/script-api/server/1.5.0/screendisplay.md
# `ScreenDisplay`

> 文档版本：1.21.0.20

`ScreenDisplay`类。script_api.@minecraft/server.screendisplay.description

## 方法

/// define
`isValid`


///

script_api.@minecraft/server.screendisplay.isvalid.description

```js
isValid(): boolean
```

/// html | div.result
//// define
返回值：`boolean`

- script_api.@minecraft/server.screendisplay.isvalid.return


////

///


/// define
`setActionBar`


///

script_api.@minecraft/server.screendisplay.setactionbar.description

```js
setActionBar(text: (RawMessage | string)[] | RawMessage | string): void
```

/// html | div.result
//// define
`text`：`(RawMessage | string)[]`|[`RawMessage`](./rawmessage.md)|`string`

- script_api.@minecraft/server.screendisplay.setactionbar.text.description


////

//// define
返回值：`void`

- script_api.@minecraft/server.screendisplay.setactionbar.return


////

///


/// define
`setTitle`


///

script_api.@minecraft/server.screendisplay.settitle.description

```js
setTitle(title: (RawMessage | string)[] | RawMessage | string, options?: TitleDisplayOptions): void
```

/// html | div.result
//// define
`title`：`(RawMessage | string)[]`|[`RawMessage`](./rawmessage.md)|`string`

- script_api.@minecraft/server.screendisplay.settitle.title.description


////

//// define
`options`：[`TitleDisplayOptions`](./titledisplayoptions.md)|`undefined`

- script_api.@minecraft/server.screendisplay.settitle.options.description


////

//// define
返回值：`void`

- script_api.@minecraft/server.screendisplay.settitle.return


////

///


/// define
`updateSubtitle`


///

script_api.@minecraft/server.screendisplay.updatesubtitle.description

```js
updateSubtitle(subtitle: (RawMessage | string)[] | RawMessage | string): void
```

/// html | div.result
//// define
`subtitle`：`(RawMessage | string)[]`|[`RawMessage`](./rawmessage.md)|`string`

- script_api.@minecraft/server.screendisplay.updatesubtitle.subtitle.description


////

//// define
返回值：`void`

- script_api.@minecraft/server.screendisplay.updatesubtitle.return


////

///

